--- a/app/assets/stylesheets/layouts/_index.scss
+++ b/app/assets/stylesheets/layouts/_index.scss
@@ -3,3 +3,24 @@
 // @import "dashboard";
 // @import "profile";
 // @import "map";
+a:hover {
+  color:red;
+  text-decoration:none;
+  border:red;
+}
+
+.cocktail-card-container {
+  margin-bottom: 30px;
+}
+
+.container-new-card {
+  max-width: 900px;
+  height: calc(100vh - 170px);
+  margin: 0px;
+}
+
+h1 {
+  margin-top:0;
+  padding-top:20px;
+}
+
