--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,11 +1,16 @@
-<h1>Create a new cocktail</h1>
-
-<%= simple_form_for (@cocktail) do |f| %>
-  <div class="form-group">
-    <%= f.input :name, id: 'new-cocktail-name' %>
+<div class="container">
+  <div class="container-new-card">
+  <h1>Create a new cocktail</h1>
+  <%= simple_form_for (@cocktail) do |f| %>
+    <div class="form-group">
+      <%= f.input :name, id: 'new-cocktail-name' %>
+      <%= f.input :photo %>
+      <%= f.input :photo_cache, as: :hidden %>
+    </div>
+    <button class="btn btn-success" id='create'>Validate your cocktail name</button>
+    <%#= f.submit 'Validate your cocktail name', class:"btn btn-success", id: 'create' %>
+  <% end %>
+  <br>
+  <%= link_to 'Back to list', cocktails_path, class: "btn btn-primary" %>
   </div>
-  <%= f.submit 'Validate your cocktail name', class:"btn btn-success", id: 'create' %>
-<% end %>
-
-<br>
-<%= link_to 'Back to list', cocktails_path, class: "btn btn-primary" %>
+</div>
