--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,17 +1,18 @@
-<h1> Detail of <%= @cocktail.name %></h1>
-
-
-<ul>
-  <% @cocktail.doses.each do |dose| %>
-    <li>
-      <%= @cocktail.name.capitalize %> needs
-      <%= dose.description %> of <%= dose.ingredient.name %>
-         <%= link_to "<i class=\"fas fa-trash-alt\"></i>".html_safe, dose_path(dose),
-      method: :delete,
-      data: { confirm: "Are you sure?" } %>
-    </li>
-  <% end %>
-</ul>
-
-<%= link_to 'Back to main list', cocktails_path, class: "btn btn-primary" %>
-<%= link_to 'Add a dose', new_cocktail_dose_path(@cocktail), class: "btn btn-success" %>
+<div class="container">
+  <div class="container-new-card">
+    <h1> Detail of <%= @cocktail.name %></h1>
+    <ul>
+      <% @cocktail.doses.each do |dose| %>
+        <li>
+          <%= @cocktail.name.capitalize %> needs
+          <%= dose.description %> of <%= dose.ingredient.name %>
+             <%= link_to "<i class=\"fas fa-trash-alt\"></i>".html_safe, dose_path(dose),
+          method: :delete,
+          data: { confirm: "Are you sure?" } %>
+        </li>
+      <% end %>
+    </ul>
+    <%= link_to 'Back to main list', cocktails_path, class: "btn btn-primary" %>
+    <%= link_to 'Add a dose', new_cocktail_dose_path(@cocktail), class: "btn btn-success" %>
+  </div>
+</div>
