--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <%= render "shared/banner" %>
     <%= yield %>
-    <%= javascript_include_tag "application" %>
+    <%= render "shared/footer" %>
+    <%#= javascript_include_tag "application" %>
     <%= javascript_pack_tag "application" %>
   </body>
 </html>
